cross hair  cursor + pos marker + add button

--- a/server/webjs/index.html
+++ b/server/webjs/index.html
@@ -17,6 +17,7 @@
 <body>
     <div id="toolbar">
         <span class="title">MySpots</span>
+        <span id="button-add" class="button">Add</span>
         <span id="button-center" class="button">Center</span>
         <span id="button-login" class="button">Login</span>
         <span id="button-logout" class="button">Logout</span>
