--- a/server/webjs/index.html
+++ b/server/webjs/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>MySpots</title>
-
+    
+     <!-- Font awsome -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+    <script src="https://kit.fontawesome.com/2b8c919a81.js" crossorigin="anonymous"></script>
      <!-- Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 
     <link rel="stylesheet" href="spots.css"/>
+    <script src="app.js"></script>
+	<script src="identity.js"></script>
+	<script src="map.js"></script>
+	<script src="ui.js"></script>
     <script src="spots.js"></script>
 </head>
 
@@ -18,6 +25,7 @@
     <div id="toolbar">
         <span class="title">MySpots</span>
         <span id="button-add" class="button">Add</span>
+        <span id="button-fit" class="button">Fit</span>
         <span id="button-localize" class="button">Loc</span>
         <span id="button-center" class="button">Ctr</span>
         <span id="button-login" class="button">Login</span>
@@ -45,21 +53,32 @@
         </div>
     </div>
 
-    <div id="add-spot-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2 class="text-center">New Spot</h2>
-            <form>
-                <div class="input-group">
-                    <label for="name" class="label">Spot Name</label>
-                    <input type="text" id="name" class="input name" value="">
+
+    <div id="content">
+        <div id="sidebar">
+
+            <div id="add-spot-modal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2 class="text-center">New Spot</h2>
+                    <form>
+                        <div class="input-group">
+                            <label for="name" class="label">Name</label>
+                            <input type="text" id="name" class="input name" value="">
+                            <label for="description">Description</label>
+                            <textarea id="description"></textarea>
+                        </div>
+                        <button class="button submit" type="submit">Save</button>
+                    </form>
                 </div>
-                <button class="button submit" type="submit">Save</button>
-            </form>
+            </div>
+ 
+        </div>
+
+        <div id="map-content">
+            <div id="map"></div>
         </div>
     </div>
-
-    <div id="map"></div>
 
     <script>
         window.addEventListener('load', onLoaded)
