app: removed toolbar, map custom controls

--- a/server/webjs/index.html
+++ b/server/webjs/index.html
@@ -22,17 +22,6 @@
 </head>
 
 <body>
-    <div id="toolbar">
-        <span class="title">MySpots</span>
-        <span id="button-add" class="button">Add</span>
-        <span id="button-fit" class="button">Fit</span>
-        <span id="button-localize" class="button">Loc</span>
-        <span id="button-center" class="button">Ctr</span>
-        <span id="button-login" class="button">Login</span>
-        <span id="button-logout" class="button">Logout</span>
-        <span id="user-info"></span>
-    </div>
-
     <div id="login-modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -54,30 +43,37 @@
     </div>
 
 
-    <div id="content">
-        <div id="sidebar">
+    <div id="sidebar">
 
-            <div id="add-spot-modal" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h2 class="text-center">New Spot</h2>
-                    <form>
-                        <div class="input-group">
-                            <label for="name" class="label">Name</label>
-                            <input type="text" id="name" class="input name" value="">
-                            <label for="description">Description</label>
-                            <textarea id="description"></textarea>
-                        </div>
-                        <button class="button submit" type="submit">Save</button>
-                    </form>
-                </div>
+        <div id="toolbar">
+            <span id="button-add" class="button">Add</span>
+            <span id="button-login" class="button">Login</span>
+            <span id="button-logout" class="button">Logout</span>
+            <span id="user-info"></span>
+        </div>
+
+        <div id="spot-info" class="sidebar-widget">
+        </div>
+
+        <div id="add-spot-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2 class="text-center">New Spot</h2>
+                <form>
+                    <div class="input-group">
+                        <label for="name" class="label">Name</label>
+                        <input type="text" id="name" class="input name" value="">
+                        <label for="description">Description</label>
+                        <textarea id="description"></textarea>
+                    </div>
+                    <button class="button submit" type="submit">Save</button>
+                </form>
             </div>
- 
         </div>
+    </div>
 
-        <div id="map-content">
-            <div id="map"></div>
-        </div>
+    <div id="map-content">
+        <div id="map"></div>
     </div>
 
     <script>
